# Acc-Backend

./: .env  .gitignore  README.md  add-currency-accounts.ts  add-missing-service-accounts.ts  backup-database.ts  bun.config.ts  link-cash-registers.ts  netlify.toml  package-lock.json  package.json  seed-simple.ts  tsconfig.json
.netlify/: netlify.toml  state.json
.netlify/edge-functions-dist/: manifest.json
.netlify/functions/: manifest.json
.netlify/plugins/: package-lock.json
accounting-engine/: Cargo.toml
accounting-engine/src/: lib.rs
functions/: api.ts
prisma/: schema.prisma  seed-chart-of-accounts.ts  seed-correct-chart.ts  seed-sample-assignments.ts  seed-users.ts  seed.ts
scripts/: migrate-booking-numbers.ts  quick-check.ts  recalculate-all-bookings.ts  seed-accounts.ts  update-all-invoices.ts
scripts/frontend-migrations/: check_accounts.js  migrate-neon-to-mysql.ts  temp_reset_invoice.js  temp_reset_invoice.sql  test-customers-api.mjs  test-env.mjs  test-protection.js  test_accounts_api.sh
server/: express-app.cjs  express-app.js  express-app.ts  index-hono.ts  index.ts  tsconfig.json
server/controllers/: accountController.ts  airlineController.ts  authController.ts  bankAccountController.ts  bookingController.ts  cashRegisterController.ts  currencyController.ts  fileController.ts  invoiceController.ts  locationController.ts  notificationController.ts  paymentController.ts  placesController.ts  reportController.ts  settingsController.ts  userController.ts
server/jobs/: currencyUpdateCron.ts
server/lib/: prisma.ts  queue.ts  redis.ts
(+97 files in other folders)
