[package]
name = "accounting-engine"
version = "0.1.0"
edition = "2021"
authors = ["Acc-File-Invoice Team"]
description = "High-performance accounting calculations engine in Rust compiled to WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
rust_decimal = { version = "1.35", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
